--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -1,15 +1,5 @@
 h1 {
   text-align: center;
-  background-color: grey;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-}
-
-div {
-  padding: 20px;
 }
 
 .container{
@@ -20,17 +10,20 @@ div {
   display: inline-block;
   vertical-align: top;
   font-family: system-ui;
-  background: #5bb4c4;
+  background: #f06d06;
   color: white;
   text-align: center;
-  width: 180px;
-  height: 240px;
+  width: 250px;
+  height: 250px;
   margin: 10px;
   padding: 10px;
-  position: relative;
-  
 }
-.title {
+ 
+.children{
+  font-style: italic;
+}
+
+.lecturer{
+  color: grey;
   font-weight: bold;
-  font-size: 1.2em; 
 }
